--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								<div class="liquid-img-group-img-container">
 									<div class="liquid-img-container-inner">
 										<figure>
-											<img  src="./assets/demo/banners/banner-1.png" alt="Banner" />
+											<img  src="./assets/demo/banners/banner-1.png" alt="Main Banner" />
 										</figure>
 									</div>
 								</div>
@@ -293,7 +293,7 @@
 								<div class="liquid-img-group-img-container">
 									<div class="liquid-img-container-inner">
 										<figure>
-											<img  src="./assets/demo/banners/selling-1.png" alt="Banner" />
+											<img  src="./assets/demo/banners/selling-1.png" alt="Selling #1" />
 										</figure>
 									</div>
 								</div>
@@ -369,7 +369,7 @@
 									<div class="liquid-img-group-img-container">
 										<div class="liquid-img-container-inner">
 											<figure>
-												<img  src="./assets/demo/banners/selling-2.png" alt="Banner" />
+												<img  src="./assets/demo/banners/selling-2.png" alt="Selling #2" />
 											</figure>
 										</div>
 									</div>
@@ -391,7 +391,7 @@
 								<div class="liquid-img-group-img-container">
 									<div class="liquid-img-container-inner">
 										<figure>
-											<img  src="./assets/demo/banners/selling-3.png" alt="Banner" />
+											<img  src="./assets/demo/banners/selling-3.png" alt="Selling #3" />
 										</figure>
 									</div>
 								</div>
