--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 		<main id="content" class="content">
 
-			<section class="vc_row bg-custom-01 bg-center fullheight d-flex align-items-center py-3 mb-60">
+			<section class="vc_row bg-center fullheight d-flex align-items-center py-3 mb-60">
 
 				<div class="container">
 					<div class="row d-flex flex-wrap align-items-center">
@@ -123,7 +123,7 @@
 
 							<div class="ld-fancy-heading">
 								<h2
-									class="text-white ltr-sp--012"
+									class="ltr-sp--012"
 									data-fittext="true"
 									data-fittext-options='{"compressor":0.775,"maxFontSize":"60","minFontSize":"40"}'
 									data-split-text="true"
@@ -142,14 +142,14 @@
 							</div><!-- /.ld-fancy-heading -->
 
 							<div class="ld-fancy-heading mask-text">
-								<p class="text-white font-size-21" data-split-text="true" data-split-options='{ "type": "words" }'>
+								<p class="font-size-21" data-split-text="true" data-split-options='{ "type": "words" }'>
 									<span class="ld-fh-txt">
-										<span class="opacity-08">Encontre fornecedores e faça pedidos com rapidez.</span>
+										<span>Encontre fornecedores e faça pedidos em um só lugar.</span>
 									</span>
 								</p>
-								<a href="./register.html" class="btn btn-solid btn-white text-uppercase btn-lg round font-size-12 lh-15 font-weight-bold ltr-sp-05 mt-3">
+								<a href="./register.html" class="btn btn-solid text-uppercase btn-lg round font-size-12 lh-15 font-weight-bold ltr-sp-05 mt-3">
 									<span>
-										<span class="btn-txt text-primary">Comece Agora</span>
+										<span class="btn-txt">Comece Agora</span>
 									</span>
 								</a>
 							</div><!-- /.ld-fancy-heading -->
@@ -161,7 +161,7 @@
 								<div class="liquid-img-group-img-container">
 									<div class="liquid-img-container-inner">
 										<figure>
-											<img  src="./assets/demo/banners/banner-1.png" alt="Main Banner" />
+											<img  src="./assets/demo/banners/banner.png" alt="Main Banner" />
 										</figure>
 									</div>
 								</div>
@@ -187,7 +187,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<h3 class="font-weight-bold text-havelock-blue">Encontre Fornecedores</h3>
-									<p>Veja uma variedade de produtos de múltiplos fornecedores em um só lugar.</p>
+									<p>Veja uma variedade de produtos de múltiplos fornecedores da sua região.</p>
 									<a href="#supplier" class="btn btn-naked text-havelock-blue">
 										<span>
 											<span class="btn-txt">Saiba Mais</span>
@@ -231,7 +231,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<h3 class="font-weight-bold text-neon-carrot">Aumente seu Lucro</h3>
-									<p>Compare preços, negocie direto com fornecedores, e controle seus custos.</p>
+									<p>Compare preços, analise seus pedidos e controle os custos.</p>
 									<a href="#profit" class="btn btn-naked text-neon-carrot">
 										<span>
 											<span class="btn-txt">Saiba Mais</span>
