--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="contact-form contact-form-inputs-filled contact-form-inputs-round contact-form-button-block contact-form-button-round font-size-16">
-								<form novalidate="novalidate">
+								<form action="./assets/php/mailer.php" method="post" novalidate="novalidate">
 									<div class="row">
 										<div class="col-md-3">
 											<input class="bg-white text-dark" type="text" name="name" aria-required="true" aria-invalid="false" placeholder="Nome da Empresa" required>
@@ -545,6 +545,7 @@
 <script src="./assets/js/theme-vendors.js"></script>
 <script src="./assets/js/theme.min.js"></script>
 <script src="./assets/js/liquidAjaxMailchimp.min.js"></script>
+<script src="./assets/js/liquidAjaxContactForm.min.js"></script>
 
 </body>
 </html>
