--- a/index.html
+++ b/index.html
@@ -173,6 +173,24 @@
 
 			</section>
 
+			<section class="vc_row hidden-lg hidden-md mb-50">
+				<div class="container">
+					<div class="row">
+						<div class="lqd-column col-md-6">
+							<div class="liquid-img-group-single">
+								<div class="liquid-img-group-img-container">
+									<div class="liquid-img-container-inner">
+										<figure>
+											<img  src="./assets/demo/banners/banner.png" alt="Main Banner" />
+										</figure>
+									</div>
+								</div>
+							</div>
+						</div><!-- /.col-md-6 hidden-xs hidden-sm -->
+					</div>
+				</div>
+			</section>
+
 			<section class="vc_row pt-75 pb-75">
 				<div class="container">
 					<div class="row">
