--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<h3 class="font-weight-bold text-neon-carrot">Aumente seu Lucro</h3>
-									<p>Compare preços, analise seus pedidos e controle os custos.</p>
+									<p>Compare preços, analise seus pedidos e controle seus custos.</p>
 									<a href="#profit" class="btn btn-naked text-neon-carrot">
 										<span>
 											<span class="btn-txt">Saiba Mais</span>
@@ -279,7 +279,7 @@
 									data-custom-animations="true"
 									data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":"1200","delay":"40","easing":"easeOutQuint","direction":"forward","initValues":{"translateY":30,"opacity":0},"animations":{"translateY":0,"opacity":1}}'
 									data-split-options='{"type":"words"}'>
-									<span class="ld-fh-txt">Feito para facilitar seu dia a dia e<br />levar seu negócio para o próximo nível.</span>
+									<span class="ld-fh-txt">Feito para facilitar o seu dia a dia.</span>
 								</h2>
 							</div><!-- /.ld-fancy-heading -->
 
@@ -340,10 +340,10 @@
 							</header><!-- /.fancy-title -->
 
 							<h5>Novos Fornecedores</h5>
-							<p class="mb-5">Navegue pela variedade de produtos de diversos fornecedores da sua região.</p>
+							<p class="mb-5">Pesquise e navegue pela catálogo de diversos fornecedores perto de você.</p>
 
 							<h5>Fácil de Gerenciar</h5>
-							<p>Mantenha sua comunicação e relacionamento com seus fornecedores em só lugar.</p>
+							<p>Mantenha a comunicação e relacionamento com seus fornecedores em só lugar.</p>
 
 						</div><!-- /.col-md-5 -->
 
