front page changes

--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
 				</div>
 			</section>
 
-			<section class="vc_row pt-75 pb-75">
+			<section class="vc_row pt-75 pb-75  bg-light">
 				<div class="container">
 					<div class="row">
 
 						<div class="lqd-column col-md-4">
 
-							<div class="iconbox iconbox-shadow-hover iconbox-filled bg-gray-2">
+							<div class="iconbox iconbox-shadow-hover iconbox-filled">
 								<div class="iconbox-icon-wrap">
 									<span class="iconbox-icon-container text-havelock-blue">
 										<i class="icon-basic_calendar"></i>
@@ -219,7 +219,7 @@
 
 						<div class="lqd-column col-md-4">
 
-							<div class="iconbox iconbox-shadow-hover iconbox-filled bg-gray-2">
+							<div class="iconbox iconbox-shadow-hover iconbox-filled">
 								<div class="iconbox-icon-wrap">
 									<span class="iconbox-icon-container text-turquoise">
 										<i class="icon-basic_map"></i>
@@ -241,7 +241,7 @@
 
 						<div class="lqd-column col-md-4">
 
-							<div class="iconbox iconbox-shadow-hover iconbox-filled bg-gray-2">
+							<div class="iconbox iconbox-shadow-hover iconbox-filled">
 								<div class="iconbox-icon-wrap">
 									<span class="iconbox-icon-container text-neon-carrot">
 										<i class="icon-ecommerce_gift"></i>
